# fam_scape_bot

./: .env.example  .gitignore  AGENTS.md  README.md  README_BOT.md  coverage.xml  pre-commit-checks.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_precommit.py
.github/workflows/: ci.yml  deploy.yml
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
scripts/: analyze_errors.py  debug_db.py  dump_pdf_tables.py  inspect_pdf_text.py  run_real_data_tests.sh  run_scrape_manual.py  setup-vps.sh  test_pdf_debug.py  test_scrape.py
src/: __init__.py  config.py  main.py
src/bot/: filters.py  keyboards.py  messages.py
src/bot/handlers/: admin.py  competitions.py  search.py  start.py  subscription.py  subscriptions.py
src/database/: engine.py  models.py
src/database/repositories/: __init__.py  base.py  competition.py  error.py  event.py  notification.py  subscription.py  user.py
src/notifications/: service.py
src/scheduler/: jobs.py  runner.py
src/scraper/: models.py  pdf_parser.py  web_scraper.py
src/utils/: hash.py  logging.py
tests/: conftest.py
tests/fixtures/: real_calendar_data.py
tests/integration/: test_deduplication_and_cleanup_real.py  test_full_workflow_real.py  test_subscription_commands.py
tests/unit/: test_multi_date_competitions.py  test_notifications.py  test_pdf_parser.py  test_web_scraper.py
tests/unit/test_real_data/: __init__.py  test_pdf_parser_real.py  test_web_scraper_real.py
